--- a/unidade03/exercicio01.html
+++ b/unidade03/exercicio01.html
@@ -6,9 +6,11 @@
         
         <script src="jquery-3.2.1.min.js"></script>
         <script>
-			$(function(e) {
-               alert("Pronto, seu DOM foi carregado 3"); 
-            });
+            $(function(e)
+            {
+                alert("O seu DOM foi aberto e carregado");
+                console.log("É deu certo heheheh");
+            })
 		</script>
     </head>
 
