--- a/unidade03/exercicio02.html
+++ b/unidade03/exercicio02.html
@@ -20,7 +20,7 @@
         <script>
 
         	$( function() {
-                $("nav a").css("color","black");
+                $("nav a:contains('China')").css("color","black").css("display","block");
 			})
         </script>   
                 
