--- a/unidade03/projeto.html
+++ b/unidade03/projeto.html
@@ -14,7 +14,8 @@
 		<script src="jquery-3.2.1.min.js"></script>
         <script>
 			$( function(e) {
-	
+                $("li a[href$='.pdf']").before("<img src='imagens/icon_pdf.gif'>");
+                $("li a[href$='.zip']").before("<img src='imagens/icon_zip.gif'>");
             });
 		</script>
     </head>
